# partitionTest

./: .gitignore  .python-version  README.md  pyproject.toml  requirements.txt
examples/: compare_projections.py  find_optimal_partition.py  mesh_visualization.py  test_matrix_construction.py  test_slsqp.py  test_torus_optimization_multiple.py  torus_visualization.py
parameters/: input.yaml
scripts/: submit.sh
src/: __init__.py  config.py  find_contours.py  lbfgs_optimizer.py  mesh.py  optimization.py  plot_utils.py  projection_direct.py  projection_iterative.py  slsqp_optimizer.py  slsqp_optimizer_analytic.py  visualization.py
